--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -758,6 +758,8 @@
     <string name="pool_start">Pool Start</string>
     <string name="pool_stop">Pool Stop</string>
     <string name="alter_phone_number">Alternate Phone Number</string>
+    <string name="reset">Reset</string>
+    <string name="unable_to_capture_signature">unable to capture signature</string>
 
 
     <string-array name="CountryCodes" >
