--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -713,6 +713,8 @@
     <string name="driver_app">DRIVER APPLICATION</string>
     <string name="register_as_driver">Register as DRIVER</string>
     <string name="distance_lower">distance</string>
+    <string name="please_drop_customer_delivery">End %s\'s delivery</string>
+    <string name="please_start_customer_delivery">Start %s\'s delivery</string>
 
 
     <string-array name="CountryCodes" >
