feature_delivery_batch_optimization: show estimated fare in push

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -797,6 +797,7 @@
     <string name="please_start_customer_delivery">Start %s\'s delivery</string>
     <string name="please_reach_customer_delivery">Pickup %s\'s delivery</string>
     <string name="select_merchant">Select Merchant</string>
+    <string name="estimated_fare">(Estimated Fare)</string>
 
 
     <string-array name="CountryCodes" >
