--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -769,6 +769,7 @@
 	<string name="driver_app">DRIVER APPLICATION</string>
 	<string name="register_as_driver">Register as DRIVER</string>
 	<string name="distance_lower">दूरी</string>
+	<string name="looking_for_customer_app">Looking for Customer App</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
