--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -758,6 +758,7 @@
 	<string name="driver_app">DRIVER APPLICATION</string>
 	<string name="register_as_driver">Register as DRIVER</string>
 	<string name="distance_lower">Distance</string>
+	<string name="looking_for_customer_app"><u>Looking for Customer App?</u></string>
 
 
 	<string-array name="CountryCodes" >
