--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -762,7 +762,8 @@
 	<string name="please_start_customer_delivery">Start %s\'s delivery</string>
 	<string name="please_reach_customer_delivery">Pickup %s\'s delivery</string>
 	<string name="select_merchant">Select Merchant</string>
-
+	<string name="auto_detect_otp_failed">Automatic detection of OTP Failed</string>
+	<string name="auto_detect_otp_wait">Autodetecting OTP. Please wait...</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
