--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -780,6 +780,11 @@
     <string name="provide_sign_msg">Please provide signature before submit</string>
     <string name="pls_type_name">Please type your name before submit</string>
     <string name="looking_for_customer_app">Looking for Customer App</string>
+    <string name="tutorial_accept_ride">Turn Jugnoo on to start accepting rides</string>
+    <string name="tutorial_tap_ok">Tap \'OK\'</string>
+    <string name="tutorial_wait_for_customer">Wait for customer...</string>
+    <string name="tutorial_your_location">The blue dot shows your current location</string>
+    <string name="start_training">Start Traning</string>
 
 
     <string-array name="CountryCodes" >
