--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -809,6 +809,8 @@
     <string name="looking_for_customer_app">Looking for Customer App</string>
     <string name="image">image</string>
 
+    <string name="auto_detect_otp_failed">Automatic detection of OTP Failed</string>
+    <string name="auto_detect_otp_wait">Autodetecting OTP. Please wait...</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
