--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -812,6 +812,13 @@
     <string name="tutorial_wait_for_customer">Wait for customer...</string>
     <string name="tutorial_your_location">The blue dot shows your current location</string>
     <string name="start_training">Start Traning</string>
+    <string name="tutorial_customer_requesting_ride">Customer is requesting a ride...\\nTap \'Accept\'.</string>
+    <string name="tutorial_drive_to_pickup">Drive to the pickup point.</string>
+    <string name="tutorial_tap_to_start_ride">Tap \'Start Ride\' when you are ready to start the ride</string>
+    <string name="tutorial_tap_end_ride">Tap \'End Ride\' only after dropping the customer</string>
+    <string name="tutorial_tap_ok_endride">Tap \'OK\' if you have dropped the customer</string>
+    <string name="tutorial_tap_done_finish">Tap DONE to finish</string>
+    <string name="tutorial_tap_arrived_if_at_pickup">Tap \'Arrived\' if you are at the pickup location</string>
 
 
     <string-array name="CountryCodes" >
