--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -242,7 +242,7 @@
 
 	<string name="enter_new_phone_no">Enter New Phone Number</string>
 	<string name="enter_fare">ENTER FARE</string>
-	<string name="enter_otp">Enter OTP</string>
+	<string name="enter_otp">ENTER OTP</string>
 	<string name="email">Email:</string>
 
 	<string name="fare1">Fare :</string>
@@ -580,7 +580,7 @@
 	<string name="delivery_completed">Delivery Completed</string>
 	<string name="delivery_cancelled">Delivery Cancelled</string>
 
-	<string name="miss_call_otp">Give a Missed Call</string>
+	<string name="miss_call_otp">GIVE A MISSED CALL</string>
 	<string name="give_missed_call_dialog_text">Give us a missed call and we will verify your
 		identity
 	</string>
@@ -774,7 +774,7 @@
 	<string name="looking_for_customer_app"><u>Looking for Customer App?</u></string>
 	<string name="image">image</string>
 
-	<string name="auto_detect_otp_failed">Automatic detection of OTP Failed</string>
+	<string name="auto_detect_otp_failed">Automatic detection of OTP Failed.</string>
 	<string name="auto_detect_otp_wait">Autodetecting OTP. Please wait...</string>
 
 	<string-array name="CountryCodes" >
