--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -765,6 +765,7 @@
     <string name="tutorial_tap_ok_endride">Tap \'OK\' if you have dropped the customer</string>
     <string name="tutorial_tap_done_finish">Tap \'DONE\' to finish</string>
     <string name="tutorial_tap_arrived_if_at_pickup">Tap \'Arrived\' if you are at the pickup location</string>
+    <string name="tutorial_driver_to_pickup_point">Drive to the pickup point.</string>
 
 
     <string-array name="CountryCodes" >
