--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -789,6 +789,7 @@
 
 	<string name="auto_detect_otp_failed">Automatic detection of OTP Failed.</string>
 	<string name="auto_detect_otp_wait">Autodetecting OTP. Please wait...</string>
+	<string name="tutorial_tap_yes">Tap \'YES\'</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
