--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -790,6 +790,8 @@
 	<string name="auto_detect_otp_failed">Automatic detection of OTP Failed.</string>
 	<string name="auto_detect_otp_wait">Autodetecting OTP. Please wait...</string>
 	<string name="tutorial_tap_yes">Tap \'YES\'</string>
+	<string name="arriving">Arriving</string>
+	<string name="arrivingdot">Arriving...</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
