--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -562,7 +562,7 @@
 	<string name="delivery_is_over">Delivery is Over</string>
 	<string name="orders_delivered">Orders Delivered</string>
 	<string name="orders_returned">Orders Returned</string>
-	<string name="rate_your_vendor">Rate Your Vendor</string>
+	<string name="rate_your_vendor">Rate Your Merchant</string>
 	<string name="view_orders">View Orders</string>
 	<string name="delivery_numbers">No. of Deliveries :</string>
 	<string name="approx">(Approx)</string>
