--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -825,6 +825,7 @@
     <string name="auto_detect_otp_failed">Automatic detection of OTP Failed</string>
     <string name="auto_detect_otp_wait">Autodetecting OTP. Please wait...</string>
     <string name="tutorial_tap_yes">Tap \'YES\'</string>
+    <string name="upload_later">Upload Later</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
