--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -746,6 +746,9 @@
     <string name="tutorial_driver_to_pickup_point">Drive to the pickup point.</string>
     <string name="tutorial_tap_yes">Tap \'YES\'</string>
     <string name="upload_later">Upload Later</string>
+    <string name="training_confirmation_text">You would receive no customer requests during
+        training. Are you sure you want to start?
+    </string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
