feature_new_enrollment_ui: jugnoo on during training fix

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -801,6 +801,7 @@
     <string name="training_confirmation_text">You would receive no customer requests during
         training. Are you sure you want to start?
     </string>
+    <string name="request_autos">Request for AUTOS will be sent to you now.</string>
 
 
     <string-array name="CountryCodes" >
