feature_new_enrollment_ui: UI and bug fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -802,6 +802,8 @@
         training. Are you sure you want to start?
     </string>
     <string name="request_autos">Request for AUTOS will be sent to you now.</string>
+    <string name="later">Later</string>
+    <string name="upload_now">Upload Now</string>
 
 
     <string-array name="CountryCodes" >
