--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -806,6 +806,7 @@
 	<string name="return_amount">Returned Amount</string>
 	<string name="cash_required">Cash Required</string>
 	<string name="pick_up">PICK - UP</string>
+	<string name="you_have_arrived">You have Arrived</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
