feature_delivery_redesign: UI modification

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -842,6 +842,7 @@
     <string name="cash_required">Cash Required</string>
     <string name="pick_up">PICK - UP</string>
     <string name="you_have_arrived">You have Arrived</string>
+    <string name="switchText">Switch</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
