feature_delivery_redesign: bug fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -825,6 +825,8 @@
 	<string name="away_cap">Away</string>
 	<string name="pool_only">Pool</string>
 	<string name="pickup_from">Pickup From:</string>
+	<string name="switch_confiramtion">Are you sure you want to switch delivery ?</string>
+	<string name="delivery_route">Delivery Route</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
