--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -769,6 +769,7 @@
     <string name="switch_confiramtion">Are you sure you want to switch delivery ?</string>
     <string name="delivery_route">Delivery Route</string>
     <string name="turn_jugnooo_for_training">Please turn Jugnoo On</string>
+    <string name="delivery_1">Delivery 1</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
