feature_new_enrollment_process: new UI create

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -606,10 +606,10 @@
 	<string name="upload">Upload</string>
 	<string name="mandatory">Mandatory</string>
 	<string name="optional">Optional</string>
-	<string name="uploaded">UPLOADED</string>
-	<string name="rejected">REJECTED</string>
-	<string name="verified">VERIFIED</string>
-	<string name="approval_pending">APPROVAL PENDING</string>
+	<string name="uploaded">Uploaded</string>
+	<string name="rejected">Rejected</string>
+	<string name="verified">Verified</string>
+	<string name="approval_pending">Approval Pending</string>
 	<string name="owned">Owned</string>
 	<string name="auto">Auto</string>
 	<string name="rejection_reason">Rejection Reason</string>
