feature_invoice_leaderboatd_changes: leader board changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -781,6 +781,7 @@
     <string name="closed_on">Closed On</string>
     <string name="complaint">Complaint</string>
     <string name="raisedOn">Raised On</string>
+    <string name="super_biker">Super Biker</string>
 
 
     <string-array name="CountryCodes" >
