--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -827,6 +827,7 @@
 	<string name="closed_on">Closed On</string>
 	<string name="complaint">Complaint</string>
 	<string name="raisedOn">Raised On</string>
+	<string name="super_biker">Super Biker</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
