--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -786,6 +786,12 @@
     <string name="per_km_wo_brack">PER Km</string>
     <string name="per_delivery">Per Delivery</string>
     <string name="per_km_fare">Per km fare</string>
+    <string name="return_fare">Return Fare</string>
+    <string name="pick_up_wait_time">Pickup Wait Time fare</string>
+    <string name="un_loading">un loading</string>
+    <string name="un_loading_fare">un loading fare</string>
+    <string name="loading_fare">loading fare</string>
+    <string name="pickup_distance_fare">pickup distance fare</string>
 
 
     <string-array name="CountryCodes" >
