feature_popup_on_push: earnings push created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -864,6 +864,9 @@
     <string name="raisedOn">Raised On</string>
     <string name="super_biker">Super Biker</string>
     <string name="needed">Needed</string>
+    <string name="did_you_know">Did you know?</string>
+    <string name="keep_jugnoo_on">Kepp your Jugnoo ON to earn more</string>
+    <string name="average_days_text">In last %s days drivers in your area have earned:</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
