--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -845,6 +845,9 @@
 	<string name="closed_on">समाधान हुआ</string>
 	<string name="complaint">शिकायत</string>
 	<string name="raisedOn">शिकायत की तारीख</string>
+	<string name="did_you_know">Did you know?</string>
+	<string name="keep_jugnoo_on">Kepp your Jugnoo ON to earn more</string>
+	<string name="average_days_text">In last %s days drivers in your area have earned:</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
