--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -783,6 +783,7 @@
     <string name="raisedOn">Raised On</string>
     <string name="super_biker">Super Biker</string>
     <string name="needed">Needed</string>
+    <string name="your_income">Your Income</string>
 
 
     <string-array name="CountryCodes" >
