--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -806,27 +806,6 @@
 	<string name="arriving">पहुच रहे है </string>
 	<string name="arrivingdot">पहुच रहे है ...</string>
 
-	<string name="delivery_1">Delivery 1</string>
-	<string name="range_in_km">Range (In km)</string>
-	<string name="return_fare_aplicable">Return Fare If Applicable</string>
-	<string name="per_km_wo_brack">PER Km</string>
-	<string name="per_delivery">Per Delivery</string>
-	<string name="per_km_fare">Per km fare</string>
-	<string name="return_fare">Return Fare</string>
-	<string name="pick_up_wait_time">Pickup Wait Time fare</string>
-	<string name="un_loading">un loading</string>
-	<string name="un_loading_fare">un loading fare</string>
-	<string name="loading_fare">loading fare</string>
-	<string name="pickup_distance_fare">pickup distance fare</string>
-	<string name="range">Range</string>
-	<string name="value">Value</string>
-	<string name="no_rate_card_available">No Rate Card Available</string>
-	<string name="unloading_req">Unloading Required</string>
-	<string name="loading_req">Loading Required</string>
-	<string name="unloading_fare">Unloading Fare</string>
-	<string name="super_biker">Super Biker</string>
-	<string name="needed">Needed</string>
-
 	<string name="upload_later">बाद में अपलोड करें</string>
 	<string name="training_confirmation_text">प्रशिक्षण के दौरान आपको कोई ग्राहक अनुरोध नहीं मिलेगा क्या आप वाकई शुरू करना चाहते हैं?</string>
 	<string name="request_autos">ऑटो के लिए अनुरोध अब आपको भेजा जाएगा</string>
@@ -862,14 +841,35 @@
 	<string name="closed_on">समाधान हुआ</string>
 	<string name="complaint">शिकायत</string>
 	<string name="raisedOn">शिकायत की तारीख</string>
+
+	<string name="delivery_1">Delivery 1</string>
+	<string name="range_in_km">Range (In km)</string>
+	<string name="return_fare_aplicable">Return Fare If Applicable</string>
+	<string name="per_km_wo_brack">PER Km</string>
+	<string name="per_delivery">Per Delivery</string>
+	<string name="per_km_fare">Per km fare</string>
+	<string name="return_fare">Return Fare</string>
+	<string name="pick_up_wait_time">Pickup Wait Time fare</string>
+	<string name="un_loading">un loading</string>
+	<string name="un_loading_fare">un loading fare</string>
+	<string name="loading_fare">loading fare</string>
+	<string name="pickup_distance_fare">pickup distance fare</string>
+	<string name="range">Range</string>
+	<string name="value">Value</string>
+	<string name="no_rate_card_available">No Rate Card Available</string>
+	<string name="unloading_req">Unloading Required</string>
+	<string name="loading_req">Loading Required</string>
+	<string name="unloading_fare">Unloading Fare</string>
+	<string name="super_biker">Super Biker</string>
+	<string name="needed">Needed</string>
+
 	<string name="your_income">Your Income</string>
 	<string name="did_you_know">Did you know?</string>
 	<string name="keep_jugnoo_on">Kepp your Jugnoo ON to earn more</string>
 	<string name="average_days_text">In last %s days drivers in your area have earned:</string>
 	<string name="day">day</string>
 	<string name="update_webview">Please update your WebView to latest version.</string>
-	<string name="max_earning_ins">Hurray! You are just %s away to reach your maximum earning
-	</string>
+	<string name="max_earning_ins">Hurray! You are just %s away to reach your maximum earning</string>
 	<string name="max_earning">Maximum Earning</string>
 	<string name="select_valid_offering">Please select valid Offering</string>
 
