--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -811,6 +811,16 @@
     </string>
     <string name="max_earning">Maximum Earning</string>
     <string name="select_valid_offering">Please select valid Offering</string>
+    <string name="wallet_title">Wallet Balance</string>
+    <string name="how_to_recharge">How to Recharge</string>
+    <string name="recharge_new">2 ) Recharge Now</string>
+    <string name="visit_office">1 ) Visit Office</string>
+    <string name="wallet_balance">Wallet Balance</string>
+    <string name="low_balance">\n(Low Balance)</string>
+    <string name="rupees_value_format">\u20B9%s</string>
+    <string name="rupees_value_format_negtive">-\u20B9%s</string>
+    <string name="wallet_transactions">Wallet Transactions</string>
+    <string name="no_transactions">No Transactions Currently</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
