--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -872,20 +872,21 @@
 	<string name="max_earning_ins">Hurray! You are just %s away to reach your maximum earning</string>
 	<string name="max_earning">Maximum Earning</string>
 	<string name="select_valid_offering">Please select valid Offering</string>
-    <string name="wallet_title">Wallet Balance</string>
-    <string name="how_to_recharge">How to Recharge</string>
+
+    <string name="wallet_title">खाता राशि</string>
+    <string name="how_to_recharge">रिचार्ज कैसे करें</string>
     <string name="recharge_new">2 ) Recharge Now</string>
     <string name="visit_office">1 ) Visit Office</string>
-    <string name="wallet_balance">Wallet Balance</string>
-    <string name="low_balance">\n(Low Balance)</string>
+    <string name="wallet_balance">खाता राशि</string>
+    <string name="low_balance">\n(काम राशि)</string>
     <string name="rupees_value_format">\u20B9%s</string>
 	<string name="rupees_value_format_negtive">-\u20B9%s</string>
-    <string name="wallet_transactions">Wallet Transactions</string>
-    <string name="no_transactions">No Transactions Currently</string>
+    <string name="wallet_transactions">खाता लेन-देन प्रकिर्या</string>
+    <string name="no_transactions">कोई लेन-देन प्रकिर्या नहीं की गई</string>
     <string name="added">Added</string>
     <string name="deducted">Deducted</string>
     <string name="office_address">Office Address</string>
-    <string name="view_wallet_transactions">4. View Wallet Transactions</string>
+    <string name="view_wallet_transactions">लेन-देन प्रकिर्या ब्यौरा</string>
 
     <string-array name="CountryCodes" >
 <item>93,AF</item>
